--- a/views/common/sidebar-nav.html
+++ b/views/common/sidebar-nav.html
@@ -1,13 +1,25 @@
 <div class="sidebar">
     <nav class="sidebar-nav">
         <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" ui-sref-active="active" ui-sref="app.main"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span></a>
-            </li>
-
-            <li class="divider"></li>
             <li class="nav-title">
-                UI Elements
+                NAVIGATION
+            </li>
+            <li class="nav-item nav-dropdown">
+                <a class="nav-link nav-dropdown-toggle" href="#"><i class="fa fa-graduation-cap"></i> Training</a>
+                <ul class="nav-dropdown-items">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://training.n57.net" target="_blank"><i class="fa fa-minus"></i> Technical Training</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://quiz.n57.net" target="_blank"><i class="fa fa-minus"></i> Quiz Platform</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://www.navybmr.com/active-duty/ctn/" target="_blank"><i class="fa fa-minus"></i> AiR Bibs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://www.dcita.edu/" target="_blank"><i class="fa fa-minus"></i> DCITA</a>
+                    </li>
+                </ul>
             </li>
             <li class="nav-item nav-dropdown" ng-class="{open: $state.includes('app.components')}">
                 <a class="nav-link nav-dropdown-toggle" ng-class="{active: $state.includes('app.components')}" href="#"><i class="icon-puzzle"></i> Components</a>
