Testing "roster" and "devApi" modules.  Considering building all API calls into devApi.

--- a/views/common/sidebar-nav.html
+++ b/views/common/sidebar-nav.html
@@ -4,6 +4,9 @@
             <li class="nav-title">
                 NAVIGATION
             </li>
+            <li class="nav-item">
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.roster"><i class="icon-pie-chart"></i> Roster</a>
+            </li>
             <li class="nav-item nav-dropdown">
                 <a class="nav-link nav-dropdown-toggle" href="#"><i class="fa fa-graduation-cap"></i> Training</a>
                 <ul class="nav-dropdown-items">
