--- a/views/common/sidebar-nav.html
+++ b/views/common/sidebar-nav.html
@@ -5,10 +5,10 @@
                 NAVIGATION
             </li>
             <li class="nav-item">
-                <a class="nav-link" ui-sref-active="active" ui-sref="app.roster"><i class="icon-pie-chart"></i> Roster</a>
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.reports.roster"><i class="icon-pie-chart"></i> Roster</a>
             </li>
             <li class="nav-item nav-dropdown">
-                <a class="nav-link nav-dropdown-toggle" href="#"><i class="fa fa-graduation-cap"></i> Training</a>
+                <a class="nav-link nav-dropdown-toggle" href="#"><i class="fa fa-terminal"></i> Training</a>
                 <ul class="nav-dropdown-items">
                     <li class="nav-item">
                         <a class="nav-link" href="https://training.n57.net" target="_blank"><i class="fa fa-minus"></i> Technical Training</a>
