--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,1 +1,15 @@
 // Here you can add other styles
+.container-fluid {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 20px !important;
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-bottom: 50px !important; }
+.report-card {
+    text-decoration: none !important;
+}
+.td-centered {
+    text-align: center;
+}
