--- a/scss/core/_breadcrumb.scss
+++ b/scss/core/_breadcrumb.scss
@@ -1,6 +1,7 @@
 .breadcrumb {
   position: relative;
-  margin-bottom: 1.5 * $spacer;
+  border-bottom: 0 !important;
+  // margin-bottom: 1.5 * $spacer;
 
   @include borders($breadcrumb-borders);
 }
