--- a/scss/core/_footer.scss
+++ b/scss/core/_footer.scss
@@ -1,4 +1,8 @@
 .app-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   min-height: $footer-height;
   padding: 0 $spacer;
   line-height: $footer-height;
