--- a/views/common/footer.html
+++ b/views/common/footer.html
@@ -1,5 +1,5 @@
 <footer class="app-footer">
-    <a href="http://coreui.io">CoreUI</a> &copy; 2017 creativeLabs.
+    &copy; 2017 - N57 Division, CRYPTOWARGRU 6.
     <span class="float-right">Powered by <a href="http://coreui.io">CoreUI</a>
     </span>
 </footer>
