--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -6,7 +6,21 @@
             <a class="nav-link navbar-toggler sidebar-toggler" href="#">&#9776;</a>
         </li>
 
-        <li class="nav-item px-3">
+        <ol class="breadcrumb" breadcrumb>
+            <ncy-breadcrumb></ncy-breadcrumb>
+
+            <!-- Breadcrumb Menu-->
+            <!-- <li class="breadcrumb-menu">
+                <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                    <a class="btn btn-secondary" href="#"><i class="icon-speech"></i></a>
+                    <a class="btn btn-secondary" ui-sref="app.main"><i class="icon-graph"></i> &nbsp;Dashboard</a>
+                    <a class="btn btn-secondary" ui-sref="app.main"><i class="icon-settings"></i> &nbsp;Settings</a>
+                </div>
+            </li> -->
+
+        </ol>
+        
+        <!-- <li class="nav-item px-3">
             <a class="nav-link" href="#">Dashboard</a>
         </li>
         <li class="nav-item px-3">
@@ -14,7 +28,7 @@
         </li>
         <li class="nav-item px-3">
             <a class="nav-link" href="#">Settings</a>
-        </li>
+        </li> -->
     </ul>
     <ul class="nav navbar-nav ml-auto d-md-down-none">
         <li class="nav-item">
