Register view design.  Needs form validation and rank will not pass to db.

--- a/css/style.css
+++ b/css/style.css
@@ -8939,3 +8939,12 @@ hr.transparent {
 
 .td-centered {
   text-align: center; }
+
+.validated {
+  color: green; }
+
+.invalidated {
+  color: red; }
+
+.highlight {
+  background-color: yellow; }
