--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -13,3 +13,12 @@
 .td-centered {
     text-align: center;
 }
+.validated {
+    color: green;
+}//
+.invalidated {
+    color: red;
+}
+.highlight {
+    background-color: yellow;
+}
