--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -19,7 +19,7 @@
             </li> -->
 
         </ol>
-        
+
         <!-- <li class="nav-item px-3">
             <a class="nav-link" href="#">Dashboard</a>
         </li>
@@ -30,20 +30,23 @@
             <a class="nav-link" href="#">Settings</a>
         </li> -->
     </ul>
+
+
+
     <ul class="nav navbar-nav ml-auto d-md-down-none">
-        <li class="nav-item">
+        <li class="nav-item" data-ng-hide="!authentication.IsAuthenticated">
             <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" data-ng-hide="!authentication.IsAuthenticated">
             <a class="nav-link" href="#"><i class="icon-list"></i></a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" data-ng-hide="!authentication.IsAuthenticated">
             <a class="nav-link" href="#"><i class="icon-location-pin"></i></a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" data-ng-hide="!authentication.IsAuthenticated">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 <img src="img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-                <span class="d-md-down-none">admin</span>
+                <span class="d-md-down-none">{{authentication.userName}}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
 
@@ -69,9 +72,14 @@
                 <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
             </div>
         </li>
+        <li class="nav-item" data-ng-hide="authentication.IsAuthenticated">
+            <a class="nav-link" ui-sref="app.login">Login</span></a>
+        </li>
         <li class="nav-item">
             <a class="nav-link navbar-toggler aside-menu-toggler" href="#">&#9776;</a>
         </li>
 
     </ul>
+
+
 </header>
