--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -1,4 +1,4 @@
-<header class="app-header navbar">
+<header class="app-header navbar" data-ng-controller="indexController">
     <button class="navbar-toggler mobile-sidebar-toggler d-lg-none" type="button">&#9776;</button>
     <a class="navbar-brand" ui-sref="app.main"></a>
     <ul class="nav navbar-nav d-md-down-none">
@@ -34,16 +34,23 @@
 
 
     <ul class="nav navbar-nav ml-auto d-md-down-none">
-        <li class="nav-item" data-ng-hide="!authentication.IsAuthenticated">
+
+        <!-- <li data-ng-hide="!authentication.isAuth"><a href="#">{{authentication.userName}}</a></li>
+        <li data-ng-hide="!authentication.isAuth"><a href="#/orders">My Orders</a></li>
+        <li data-ng-hide="!authentication.isAuth"><a href="" data-ng-click="logOut()">Logout</a></li>
+        <li data-ng-hide="authentication.isAuth"> <a href="#/login">Login</a></li> 
+        <li data-ng-hide="authentication.isAuth"> <a href="#/register">Sign Up</a></li> -->
+
+        <li class="nav-item" data-ng-hide="!authentication.isAuth">
             <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
         </li>
-        <li class="nav-item" data-ng-hide="!authentication.IsAuthenticated">
+        <li class="nav-item" data-ng-hide="!authentication.isAuth">
             <a class="nav-link" href="#"><i class="icon-list"></i></a>
         </li>
-        <li class="nav-item" data-ng-hide="!authentication.IsAuthenticated">
+        <li class="nav-item" data-ng-hide="!authentication.isAuth">
             <a class="nav-link" href="#"><i class="icon-location-pin"></i></a>
         </li>
-        <li class="nav-item dropdown" data-ng-hide="!authentication.IsAuthenticated">
+        <li class="nav-item dropdown" data-ng-hide="!authentication.isAuth">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 <img src="img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
                 <span class="d-md-down-none">{{authentication.userName}}</span>
@@ -69,11 +76,14 @@
                 <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a>
                 <div class="divider"></div>
                 <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>
-                <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
+                <a class="dropdown-item" href="#" data-ng-click="logOut()"><i class="fa fa-lock"></i> Logout</a>
             </div>
         </li>
-        <li class="nav-item" data-ng-hide="authentication.IsAuthenticated">
-            <a class="nav-link" ui-sref="app.login">Login</span></a>
+        <li class="nav-item" data-ng-hide="authentication.isAuth">
+            <a ui-sref="app.login">Login</span></a>
+        </li>
+        <li class="nav-item" data-ng-hide="authentication.isAuth"> 
+            <a ui-sref="app.register">Register</a>
         </li>
         <li class="nav-item">
             <a class="nav-link navbar-toggler aside-menu-toggler" href="#">&#9776;</a>
