Implemented Alpha Roster/Sailor Details feature

--- a/views/common/sidebar-nav.html
+++ b/views/common/sidebar-nav.html
@@ -5,7 +5,7 @@
                 NAVIGATION
             </li>
             <li class="nav-item">
-                <a class="nav-link" ui-sref-active="active" ui-sref="app.reports.roster"><i class="icon-pie-chart"></i> Roster</a>
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.reports.roster"><i class="fa fa-anchor"></i> Roster</a>
             </li>
             <li class="nav-item nav-dropdown">
                 <a class="nav-link nav-dropdown-toggle" href="#"><i class="fa fa-terminal"></i> Training</a>
