--- a/views/common/aside.html
+++ b/views/common/aside.html
@@ -113,8 +113,10 @@
             </div>
             <hr class="mx-3 my-0">
         </div>
+
+
         <div class="tab-pane p-3" id="messages" role="tabpanel">
-            <div class="message">
+            <<div class="message">
                 <div class="py-3 pb-5 mr-3 float-left">
                     <div class="avatar">
                         <img src="img/avatars/7.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
@@ -187,8 +189,10 @@
                 </div>
                 <div class="text-truncate font-weight-bold">Lorem ipsum dolor sit amet</div>
                 <small class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt...</small>
-            </div>
+            </div>>
         </div>
+
+
         <div class="tab-pane p-3" id="pocs" role="tabpanel">
             <div ng-init="contacts = [
                 {office: 'Quarterdeck', phone: '(301) 677-0217'},
