--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -41,7 +41,7 @@
         <li data-ng-hide="authentication.isAuth"> <a href="#/login">Login</a></li> 
         <li data-ng-hide="authentication.isAuth"> <a href="#/register">Sign Up</a></li> -->
 
-        <li class="nav-item" data-ng-hide="!authentication.isAuth">
+        <!-- <li class="nav-item" data-ng-hide="!authentication.isAuth">
             <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
         </li>
         <li class="nav-item" data-ng-hide="!authentication.isAuth">
@@ -49,11 +49,11 @@
         </li>
         <li class="nav-item" data-ng-hide="!authentication.isAuth">
             <a class="nav-link" href="#"><i class="icon-location-pin"></i></a>
-        </li>
+        </li> -->
         <li class="nav-item dropdown" data-ng-hide="!authentication.isAuth">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                <img src="img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-                <span class="d-md-down-none">{{authentication.userName}}</span>
+                <i class="fa fa-terminal"></i>
+                <span class="d-md-down-none">{{userData.rateName}}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
 
@@ -70,7 +70,7 @@
                     <strong>Settings</strong>
                 </div>
 
-                <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>
+                <a class="dropdown-item" ui-sref="app.profile"><i class="fa fa-user"></i> Profile</a>
                 <a class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Setting</a>
                 <a class="dropdown-item" href="#"><i class="fa fa-usd"></i> Payments<span class="badge badge-default">42</span></a>
                 <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a>
