--- a/views/common/footer.html
+++ b/views/common/footer.html
@@ -1,5 +1,5 @@
 <footer class="app-footer">
-    &copy; 2017 - N57 Division, CRYPTOWARGRU 6.
+    &copy; 2017 - N57 Division, CRYPTOWARGRU SIX.
     <span class="float-right">Powered by <a href="http://coreui.io">CoreUI</a>
     </span>
 </footer>
