--- a/views/accounts/login.html
+++ b/views/accounts/login.html
@@ -36,8 +36,7 @@
                         <div class="card-block text-center">
                             <div>
                                 <h2>Sign up</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore magna aliqua.</p>
+                                <p><br>New to N57?<br>Create an account to access more features of your divisional portal.</p>
                                 <a class="btn btn-primary active mt-3" ui-sref="app.register">Register Now!</a>
                             </div>
                         </div>
