--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -7,7 +7,7 @@
         </li>
 
         <ol class="breadcrumb" breadcrumb>
-             <ncy-breadcrumb></ncy-breadcrumb> 
+            <ncy-breadcrumb></ncy-breadcrumb>
 
             <!-- Breadcrumb Menu-->
             <!-- <li class="breadcrumb-menu">
@@ -82,7 +82,7 @@
         <li class="nav-item" data-ng-hide="authentication.isAuth">
             <a ui-sref="app.login">Login</span></a>
         </li>
-        <li class="nav-item" data-ng-hide="authentication.isAuth"> 
+        <li class="nav-item" data-ng-hide="authentication.isAuth">
             <a ui-sref="app.register">Register</a>
         </li>
         <li class="nav-item">
@@ -91,5 +91,63 @@
 
     </ul>
 
-
+    <!-- Modal -->
+    <!-- <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close float-right" data-dismiss="modal"><i class="fa fa-remove"></i></button>
+                </div>
+                <div class="modal-body" style="text-align: center">
+                    <div class="app flex-row align-items-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-md-8">
+                                    <div class="card-group mb-0">
+                                        <div class="card p-4">
+                                            <div class="card-block">
+                                                <h1>Login</h1>
+                                                <p class="text-muted">Sign In to your account</p>
+                                                <div data-ng-hide="message == ''" data-ng-class="(savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
+                                                    {{message}}
+                                                </div>
+                                                <form role="form">
+                                                    <div class="input-group mb-3">
+                                                        <span class="input-group-addon"><i class="icon-user"></i></span>
+                                                        <input type="text" class="form-control" placeholder="Username" data-ng-model="loginData.userName" required autofocus>
+                                                    </div>
+                                                    <div class="input-group mb-4">
+                                                        <span class="input-group-addon"><i class="icon-lock"></i></span>
+                                                        <input type="password" class="form-control" placeholder="Password" data-ng-model="loginData.password" required>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="col-6">
+                                                            <button type="submit" class="btn btn-primary px-4" data-ng-click="login()">Login</button>
+                                                        </div>
+                                                        <div class="col-6 text-right">
+                                                            <button type="button" class="btn btn-link px-0">Forgot password?</button>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                        <div class="card card-inverse card-primary py-5 d-md-down-none" style="width:44%">
+                                            <div class="card-block text-center">
+                                                <div>
+                                                    <h2>Sign up</h2>
+                                                    <p><br>New to N57?<br>Create an account to access more features of your
+                                                        divisional portal.</p>
+                                                    <a class="btn btn-primary active mt-3" ui-sref="app.register">Register Now!</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </div>
 </header>
