Implemented ToDo list feature

--- a/views/accounts/register.html
+++ b/views/accounts/register.html
@@ -118,7 +118,7 @@
                     <div class="col-lg-4">
                         <div class="row">
                         <h5>Administrative Data&nbsp;</h5>
-                        <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjJtMPovtLVAhUB5oMKHW3JCKUQFggoMAA&url=https%3A%2F%2Fnsipsprod.nmci.navy.mil%2F&usg=AFQjCNFFz-TG1lUzoxm6pCzRuqTWX2pVxA" target="_blank"><i class="fa fa-question-circle" style="color: #20a8d8" data-toggle="tooltip" title="Navigate to NSIPS > Employee Self Service > Electronic Service Record > Member Data Summary to find this information."></i></a>
+                        <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwjJtMPovtLVAhUB5oMKHW3JCKUQFggoMAA&url=https%3A%2F%2Fnsipsprod.nmci.navy.mil%2F&usg=AFQjCNFFz-TG1lUzoxm6pCzRuqTWX2pVxA" target="_blank"><i class="fa fa-question-circle fa-1x" style="color: #20a8d8" data-toggle="tooltip" title="Navigate to NSIPS > Employee Self Service > Electronic Service Record > Member Data Summary to find this information."></i></a>
                         </div>
                         <hr>
                         <div class="form-group">
