--- a/views/common/aside.html
+++ b/views/common/aside.html
@@ -246,45 +246,55 @@
             </div>
         </div>
 
-
-        <div class="tab-pane p-3" id="pocs" role="tabpanel">
-            <div ng-init="contacts = [
-                {office: 'Quarterdeck', phone: '(301) 677-0217'},
-                {office: 'N5 Dept LPO', phone: '(301) 677-0700'},
-                {office: 'N1 Admin LPO', phone: '(301) 677-0297'},
-                {office: 'N51 LPO', phone: '(301) 677-0300/0220'},
-                {office: 'N53 LPO', phone: '(301) 677-0355', poc: 'CTR1 Carlson'},
-                {office: 'N53 LCPO', phone: '(301) 677-0466'},
-                {office: 'N54 LPO (CFL)', phone: '(301) 677-0737'},
-                {office: 'N55 LPO', phone: '(301) 677-0019', poc: 'IT1 Grace'},
-                {office: 'N56 LPO (Honor Guard)', phone: '(301) 677-0409'},
-                {office: 'N6 (IMO)', phone: '(443) 854-2800'},
-                {office: 'BEQ', phone: '(301) 677-0400'},
-                {office: 'CCC', phone: '(301) 677-0239'},
-                {office: 'Command Training Office', phone: '(301) 677-0221/0477'},
-                {office: 'Duty Driver', phone: '(240) 997-6739'},
-                {office: 'FFSC', phone: '(301) 677-9014'},
-                {office: 'Legal', phone: '(301) 677-0877'},
-                {office: 'MAA Office', phone: '(301) 677-0490'},
-                {office: 'PAO', phone: '(301) 677-0860'},
-                {office: 'QDM', phone: '(301) 677-0355/0294', poc: 'CTR1 Carlson'},
-                {office: 'Safety', phone: '(301) 677-0299'},
-                {office: 'SSO', phone: '(443) 479-6100'}
-                ]"></div>
-
-            <h6>Points of Contact</h6>
-
-            <input ng-model="searchText" class="form-control" placeholder="Search" />
-
-            <table class="table table-hover">
-                <tr ng-repeat="contact in contacts | filter:searchText">
-                    <td>
-                        {{contact.office}}<br> {{contact.poc}}
-                        <br ng-if="contact.poc"> {{contact.phone}}
-                    </td>
-                </tr>
-            </table>
+        <!-- POCs -->
+        <div class="tab-pane p-3" id="pocs" role="tabpanel" ng-controller="pocsCtrl">
+            <h6>
+                <span style="padding-top: 30px">Points of Contact</span>
+                <button class="btn btn-success btn-sm float-right" ng-click="showAdd=!showAdd" class="float-right" data-toggle="tooltip" title="Add POC" ng-hide="showEdit"><i class="fa fa-plus"></i></a>
+            </h6>
+            <div ng-show="showAdd">
+                <hr>
+                Add POC:
+                <form name="updateForm">
+                    <input type="text" class="form-control" ng-model="newPoc.office" placeholder="Office">
+                    <input type="text" class="form-control" ng-model="newPoc.name" placeholder="Contact Rate/Name">
+                    <input type="text" class="form-control" ng-model="newPoc.number" placeholder="Phone Number">
+                    <button type="submit" class="btn btn-success btn-block" ng-click="addPoc(newPoc)"><i class="fa fa-save"></i>&nbsp; Save POC</button>
+                </form>
+                <br>
+            </div>
+            <div ng-show="showEdit">
+                <hr>
+                Edit POC:
+                <a href="#" class="float-right" ng-click="showEdit=false"><i class="fa fa-close"></i></a>
+                <form name="updateForm">
+                    <input type="text" class="form-control" ng-model="update.office" ng-value="update.office" placeholder="Office">
+                    <input type="text" class="form-control" ng-model="update.name" ng-value="update.name" placeholder="Contact Name">
+                    <input type="text" class="form-control" ng-model="update.number" ng-value="update.number" placeholder="Phone Number">
+                    <button type="submit" class="btn btn-success btn-block" ng-click="saveUpdate(update)"><i class="fa fa-save"></i>&nbsp; Save Changes</button>
+                    <button type="button" class="btn btn-danger btn-block" ng-click="deletePoc(update.id)"><i class="fa fa-trash-o"></i>&nbsp; Delete POC</button>
+                </form>
+                <br>
+            </div>
+            <div>
+                <div ng-hide="showEdit || showAdd">
+                    <hr>
+                    <input ng-model="searchText" class="form-control" placeholder="Search" />
+                </div>
+                <table class="table table-hover">
+                    <tr ng-repeat="contact in pocs | filter:searchText | orderBy: 'office'">
+                        <td>
+                            {{contact.office}}
+                            <a href="#" class="text-muted float-right" ng-click="toggleEdit(contact)" class="float-right"><i class="fa fa-pencil"></i></a>
+                            <br> {{contact.name}}
+                            <br ng-if="contact.name"> {{contact.number}}
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
+
+        <!-- SETTINGS -->
         <div class="tab-pane p-3" id="settings" role="tabpanel">
             <h6>Settings</h6>
 
