--- a/views/common/aside.html
+++ b/views/common/aside.html
@@ -18,37 +18,37 @@
 
     <!-- **** TO DO ****  -->
     <div class="tab-content">
-        <div class="tab-pane active" id="todo" role="tabpanel" ng-controller="indexController" style="padding-bottom: 75px">
+        <div class="tab-pane active" id="todo" role="tabpanel" ng-controller="toDoCtrl as toDo" style="padding-bottom: 75px">
             <!-- ADD TO DO ITEM  -->
             <div>
-                <button type="button" class="btn btn-info btn-block" ng-click="toggleAdd()"><i class="fa fa-check-square-o"></i>&nbsp; New ToDo</button>
+                <button type="button" class="btn btn-info btn-block" ng-click="toDo.toggleAdd()"><i class="fa fa-check-square-o"></i>&nbsp; New ToDo</button>
             </div>
-            <div ng-show="showAdd">
+            <div ng-show="toDo.showAdd">
                 <form name="createToDo" novalidate>
                 <div class="form-group container" style="padding-top: 10px">
-                    <a href="#" class="float-right" ng-click="toggleAdd()"><i class="fa fa-close"></i></a>
+                    <a href="#" class="float-right" ng-click="toDo.toggleAdd()"><i class="fa fa-close"></i></a>
                     <label for="toDoItem" style="padding-top: 5px">To Do:</label>
-                    <input type="text" name="toDoItem" id="toDoItem" class="form-control" ng-model="newToDo.toDoItem" placeholder="What do you need to do?" required>
+                    <input type="text" name="toDoItem" id="toDoItem" class="form-control" ng-model="toDo.newToDo.toDoItem" placeholder="What do you need to do?" required>
                 </div>
                 <hr class="mx-3 my-0">
                 <div class="form-group container">
                     <label for="dueDate" style="padding-top: 5px">Date:</label>
-                    <input type="date" name="dueDate" class="form-control" ng-model="newToDo.dueDate">
+                    <input type="date" name="dueDate" class="form-control" ng-model="toDo.newToDo.dueDate">
                 </div>
                 <hr class="mx-3 my-0">
                 <div class="form-group container">
                     <label for="dueDate" style="padding-top: 5px">Time:</label>
-                    <input type="text" name="dueDate" class="form-control" ng-model="newToDo.time">
+                    <input type="text" name="dueDate" class="form-control" ng-model="toDo.newToDo.time">
                 </div>
                 <hr class="mx-3 my-0">
-                <div class="form-group container">
+                <div class="form-group container" ng-init="toDo.newToDo.priority='low'">
                     <label for="dueDate" style="padding-top: 5px">Priority:</label><br>
-                    <label><input type="radio" ng-model="newToDo.priority" value="high" ng-required="!newToDo.priority">&nbsp;High</label>
-                    <label><input type="radio" ng-model="newToDo.priority" value="medium" ng-required="!newToDo.priority">&nbsp;Medium</label>
-                    <label><input type="radio" ng-model="newToDo.priority" value="low" ng-required="!newToDo.priority">&nbsp;Low</label>
+                    <label><input type="radio" ng-model="toDo.newToDo.priority" value="high" ng-required="!newToDo.priority">&nbsp;High</label>
+                    <label><input type="radio" ng-model="toDo.newToDo.priority" value="medium" ng-required="!newToDo.priority">&nbsp;Medium</label>
+                    <label><input type="radio" ng-model="toDo.newToDo.priority" value="low" ng-required="!newToDo.priority" ng-selected>&nbsp;Low</label>
                 </div>
                 <div align="center">
-                    <button type="submit" class="btn btn-success" ng-click="addToDo()" ng-class="{'disabled': createToDo.$invalid}"><i class="fa fa-plus"></i>&nbsp; Add ToDo</button>
+                    <button type="submit" class="btn btn-success" ng-click="toDo.addToDo()" ng-class="{'disabled': createToDo.$invalid}"><i class="fa fa-plus"></i>&nbsp; Add ToDo</button>
                 </div>
                 </form>
                 <br>
@@ -59,35 +59,36 @@
                 <br>
                 <p class="text-muted">You do not have anything<br>on your ToDo list.<br>Click "New ToDo" to begin.</p>
             </div>
-            <div ng-repeat="toDo in toDos | orderBy: ['dueDate', 'time']">
-                <div class="callout callout-danger m-0 py-3" ng-show="toDo.priority == 'high'">
+            <div ng-repeat="td in toDo.toDos | orderBy: ['dueDate', 'time']">
+                <!-- THREE DIVS CAN COLLAPSE TO ONE WITH PROPER NG-CLASS STATEMENT  -->
+                <div class="callout callout-danger m-0 py-3" ng-show="td.priority == 'high'">
                     <div>
-                        {{toDo.toDoItem}}
-                        <span class="float-right"><a href="#" ng-click="delToDo(toDo.id)"><i class="fa fa-close text-muted"></i></a></span>
+                        {{td.toDoItem}}
+                        <span class="float-right"><a href="#" ng-click="toDo.delToDo(td.id)"><i class="fa fa-close text-muted"></i></a></span>
                     </div>
-                    <div ng-show="toDo.dueDate">
-                        <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; {{toDo.dueDate | date:'MM/dd/yyyy'}}</small>
-                        <small class="text-muted mr-3" ng-show="toDo.time"><i class="fa fa-clock-o"></i>&nbsp; {{toDo.time}}</small>
+                    <div ng-show="td.dueDate">
+                        <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; {{td.dueDate | date:'MM/dd/yyyy'}}</small>
+                        <small class="text-muted mr-3" ng-show="td.time"><i class="fa fa-clock-o"></i>&nbsp; {{td.time}}</small>
                     </div>
                 </div>
-                <div class="callout callout-warning m-0 py-3" ng-show="toDo.priority == 'medium'">
+                <div class="callout callout-warning m-0 py-3" ng-show="td.priority == 'medium'">
                     <div>
-                        {{toDo.toDoItem}}
-                        <span class="float-right"><a href="#" ng-click="delToDo(toDo.id)"><i class="fa fa-close text-muted"></i></a></span>
+                        {{td.toDoItem}}
+                        <span class="float-right"><a href="#" ng-click="toDo.delToDo(td.id)"><i class="fa fa-close text-muted"></i></a></span>
                     </div>
-                    <div ng-show="toDo.dueDate">
-                        <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; {{toDo.dueDate | date:'MM/dd/yyyy'}}</small>
-                        <small class="text-muted mr-3" ng-show="toDo.time"><i class="fa fa-clock-o"></i>&nbsp; {{toDo.time}}</small>
+                    <div ng-show="td.dueDate">
+                        <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; {{td.dueDate | date:'MM/dd/yyyy'}}</small>
+                        <small class="text-muted mr-3" ng-show="td.time"><i class="fa fa-clock-o"></i>&nbsp; {{td.time}}</small>
                     </div>
                 </div>
-                <div class="callout callout-success m-0 py-3" ng-show="toDo.priority == 'low'">
+                <div class="callout callout-success m-0 py-3" ng-show="td.priority == 'low'">
                     <div>
-                        {{toDo.toDoItem}}
-                        <span class="float-right"><a href="#" ng-click="delToDo(toDo.id)"><i class="fa fa-close text-muted"></i></a></span>
+                        {{td.toDoItem}}
+                        <span class="float-right"><a href="#" ng-click="toDo.delToDo(td.id)"><i class="fa fa-close text-muted"></i></a></span>
                     </div>
-                    <div ng-show="toDo.dueDate">
-                        <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; {{toDo.dueDate | date:'MM/dd/yyyy'}}</small>
-                        <small class="text-muted mr-3" ng-show="toDo.time"><i class="fa fa-clock-o"></i>&nbsp; {{toDo.time}}</small>
+                    <div ng-show="td.dueDate">
+                        <small class="text-muted mr-3"><i class="icon-calendar"></i>&nbsp; {{td.dueDate | date:'MM/dd/yyyy'}}</small>
+                        <small class="text-muted mr-3" ng-show="td.time"><i class="fa fa-clock-o"></i>&nbsp; {{td.time}}</small>
                     </div>
                 </div>
                 <hr class="mx-3 my-0">
@@ -252,7 +253,7 @@
                 <span style="padding-top: 30px">Points of Contact</span>
                 <button class="btn btn-success btn-sm float-right" ng-click="showAdd=!showAdd" class="float-right" data-toggle="tooltip" title="Add POC" ng-hide="showEdit"><i class="fa fa-plus"></i></a>
             </h6>
-            <div ng-show="showAdd">
+            <div ng-show="showAdd" id="pocTop" name="pocTop">
                 <hr>
                 Add POC:
                 <form name="updateForm">
@@ -285,7 +286,7 @@
                     <tr ng-repeat="contact in pocs | filter:searchText | orderBy: 'office'">
                         <td>
                             {{contact.office}}
-                            <a href="#" class="text-muted float-right" ng-click="toggleEdit(contact)" class="float-right"><i class="fa fa-pencil"></i></a>
+                            <a href="#pocTop" class="text-muted float-right" ng-click="toggleEdit(contact)" class="float-right"><i class="fa fa-pencil"></i></a>
                             <br> {{contact.name}}
                             <br ng-if="contact.name"> {{contact.number}}
                         </td>
@@ -293,6 +294,7 @@
                 </table>
             </div>
         </div>
+
 
         <!-- SETTINGS -->
         <div class="tab-pane p-3" id="settings" role="tabpanel">
