--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -1,4 +1,4 @@
-<header class="app-header navbar" data-ng-controller="indexController">
+<header class="app-header navbar" data-ng-controller="indexCtrl as user">
     <button class="navbar-toggler mobile-sidebar-toggler d-lg-none" type="button">&#9776;</button>
     <a class="navbar-brand" ui-sref="app.main"></a>
     <ul class="nav navbar-nav d-md-down-none">
@@ -50,10 +50,10 @@
         <li class="nav-item" data-ng-hide="!authentication.isAuth">
             <a class="nav-link" href="#"><i class="icon-location-pin"></i></a>
         </li> -->
-        <li class="nav-item dropdown" data-ng-hide="!authentication.isAuth">
+        <li class="nav-item dropdown" data-ng-hide="!user.authentication.isAuth">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-terminal"></i>
-                <span class="d-md-down-none">{{userData.rateName}}</span>
+                <span class="d-md-down-none">{{user.userData.rateName}}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
 
@@ -76,19 +76,18 @@
                 <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a>
                 <div class="divider"></div>
                 <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>
-                <a class="dropdown-item" href="#" data-ng-click="logOut()"><i class="fa fa-lock"></i> Logout</a>
+                <a class="dropdown-item" href="#" data-ng-click="user.logOut()"><i class="fa fa-lock"></i> Logout</a>
             </div>
         </li>
-        <li class="nav-item" data-ng-hide="authentication.isAuth">
+        <li class="nav-item" data-ng-hide="user.authentication.isAuth">
             <a ui-sref="app.login">Login</span></a>
         </li>
-        <li class="nav-item" data-ng-hide="authentication.isAuth">
+        <li class="nav-item" data-ng-hide="user.authentication.isAuth">
             <a ui-sref="app.register">Register</a>
         </li>
         <li class="nav-item">
             <a class="nav-link navbar-toggler aside-menu-toggler" href="#">&#9776;</a>
         </li>
-
     </ul>
 
     <!-- Modal -->
