--- a/views/reports/roster/sailorDetails.html
+++ b/views/reports/roster/sailorDetails.html
@@ -62,7 +62,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Rate:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.rate" value="{{sailor.rate}}">
+                                    <input type="text" ng-model="newSailor.rate" ng-value="sailor.rate">
                                 </td>
                             </tr>
                             <tr>
@@ -70,7 +70,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Rank:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.rank" value="{{sailor.rank}}">
+                                    <input type="text" ng-model="newSailor.rank" ng-value="sailor.rank">
                                 </td>
                             </tr>
                             <tr>
@@ -78,7 +78,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>First Name:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.firstName" value="{{sailor.firstName}}">
+                                    <input type="text" ng-model="newSailor.firstName" ng-value="sailor.firstName">
                                 </td>
                             </tr>
                             <tr>
@@ -86,7 +86,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Last Name:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.lastName" value="{{sailor.lastName}}">
+                                    <input type="text" ng-model="newSailor.lastName" ng-value="sailor.lastName">
                                 </td>
                             </tr>
                             <tr>
@@ -94,7 +94,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Email:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.email" value="{{sailor.email}}">
+                                    <input type="text" ng-model="newSailor.email" ng-value="sailor.email">
                                 </td>
                             </tr>
                             <tr>
@@ -102,7 +102,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Street Address:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.street" value="{{sailor.street}}">
+                                    <input type="text" ng-model="newSailor.street" ng-value="sailor.street">
                                 </td>
                             </tr>
                             <tr>
@@ -110,7 +110,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>City:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.city" value="{{sailor.city}}">
+                                    <input type="text" ng-model="newSailor.city" ng-value="sailor.city">
                                 </td>
                             </tr>
                             <tr>
@@ -118,7 +118,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>State:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.state" value="{{sailor.state}}">
+                                    <input type="text" ng-model="newSailor.state" ng-value="sailor.state">
                                 </td>
                             </tr>
                             <tr>
@@ -126,7 +126,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Zip:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.zip" value="{{sailor.zip}}">
+                                    <input type="text" ng-model="newSailor.zip" ng-value="sailor.zip">
                                 </td>
                             </tr>
                             <tr>
@@ -134,7 +134,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Phone Number:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px">
-                                    <input type="text" ng-model="sailor.phoneNumber" value="{{sailor.phoneNumber}}">
+                                    <input type="text" ng-model="newSailor.phoneNumber" ng-value="sailor.phoneNumber">
                                 </td>
                             </tr>
                         </table>
@@ -221,7 +221,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Rank Date:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px;">
-                                    <input type="date" ng-model="sailor.rankDate" value="{{sailor.rankDate | date:'yyyy-MM-dd'}}">
+                                    <input type="date" ng-model="newSailor.rankDate" ng-value="sailor.rankDate | date:'yyyy-MM-dd'">
                                 </td>
                             </tr>
                             <tr>
@@ -229,7 +229,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Report Date:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px;">
-                                    <input type="date" ng-model="sailor.reportDate" value="{{sailor.reportDate | date:'yyyy-MM-dd'}}">
+                                    <input type="date" ng-model="newSailor.reportDate" ng-value="sailor.reportDate | date:'yyyy-MM-dd'">
                                 </td>
                             </tr>
                             <tr>
@@ -237,7 +237,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>ADSD:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px;">
-                                    <input type="date" ng-model="sailor.adsd" value="{{sailor.adsd | date:'yyyy-MM-dd'}}">
+                                    <input type="date" ng-model="newSailor.adsd" ng-value="sailor.adsd | date:'yyyy-MM-dd'">
                                 </td>
                             </tr>
                             <tr>
@@ -245,7 +245,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>PRD:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px;">
-                                    <input type="date" ng-model="sailor.prd" value="{{sailor.prd | date:'yyyy-MM-dd'}}">
+                                    <input type="date" ng-model="newSailor.prd" ng-value="sailor.prd | date:'yyyy-MM-dd'">
                                 </td>
                             </tr>
                             <tr>
@@ -253,7 +253,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>EAOS:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px;">
-                                    <input type="date" ng-model="sailor.eaos" value="{{sailor.eaos | date:'yyyy-MM-dd'}}">
+                                    <input type="date" ng-model="newSailor.eaos" ng-value="sailor.eaos | date:'yyyy-MM-dd'">
                                 </td>
                             </tr>
                             <tr>
@@ -261,7 +261,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Blue Badge:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px;">
-                                    <input type="checkbox" ng-model="sailor.blueBadge" value="{{sailor.blueBadge}}">
+                                    <input type="checkbox" ng-model="newSailor.blueBadge" ng-value="sailor.blueBadge">
                                 </td>
                             </tr>
                             <tr>
@@ -269,7 +269,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Destination Command:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px;">
-                                    <input type="text" ng-model="sailor.destCommand" value="{{sailor.destCommand}}">
+                                    <input type="text" ng-model="newSailor.destCommand" ng-value="sailor.destCommand">
                                 </td>
                             </tr>
                             <tr>
@@ -277,7 +277,7 @@
                                     <p style="text-align: right;padding-top: 15px"><strong>Destination UIC:</strong></p>
                                 </td>
                                 <td style="padding-left: 10px;">
-                                    <input type="text" ng-model="sailor.destUIC" value="{{sailor.destUIC}}">
+                                    <input type="text" ng-model="newSailor.destUIC" ng-value="sailor.destUIC">
                                 </td>
                             </tr>
                         </table>
@@ -321,12 +321,12 @@
                         <strong>Edit Account</strong>
                     </div>
                     <div class="card-block" ng-hide="enableEdit">
-                        <button type="button" class="btn btn-outline-primary btn-block" ng-click="editUser()"><i class="fa fa-pencil"></i>&nbsp; Edit User</button>
+                        <button type="button" class="btn btn-outline-primary btn-block" ng-click="enableEdit=true"><i class="fa fa-pencil"></i>&nbsp; Edit User</button>
                         <button type="button" class="btn btn-outline-danger btn-block" data-toggle="modal" data-target="#confirmDelModal"><i class="fa fa-trash"></i>&nbsp; Delete User</button>
                     </div>
                     <div class="card-block" ng-show="enableEdit">
                         <button type="button" class="btn btn-success btn-block" ng-click="updateUser()"><i class="fa fa-save"></i>&nbsp; Save Changes</button>
-                        <button type="button" class="btn btn-danger btn-block" ng-click="editUser()"><i class="fa fa-remove"></i>&nbsp; Cancel Changes</button>
+                        <button type="button" class="btn btn-danger btn-block" ng-click="enableEdit=false"><i class="fa fa-remove"></i>&nbsp; Cancel Changes</button>
                     </div>
                     <!-- Modal -->
                     <div id="confirmDelModal" class="modal fade" role="dialog">
