--- a/scss/bootstrap/_nav.scss
+++ b/scss/bootstrap/_nav.scss
@@ -53,6 +53,10 @@
 
   .nav-link.active,
   .nav-item.show .nav-link {
+    border-top: $nav-tabs-border-width solid transparent;
+    border-right: $nav-tabs-border-width solid transparent;
+    border-left: $nav-tabs-border-width solid transparent;
+    border-bottom: 0 !important;
     color: $nav-tabs-active-link-color;
     background-color: $nav-tabs-active-link-bg;
     border-color: $nav-tabs-active-link-border-color $nav-tabs-active-link-border-color $nav-tabs-active-link-bg;
