Updates to task management

--- a/css/style.css
+++ b/css/style.css
@@ -8969,6 +8969,15 @@ hr.transparent {
 .fade.ng-hide {
   opacity: 0; }
 
+.details-slide {
+  transition: all linear 0.4s;
+  max-height: 250px;
+  overflow: hidden;
+  text-overflow: clip; }
+
+.details-slide.ng-hide {
+  max-height: 0; }
+
 .catspan {
   border-width: 1px;
   border-style: solid;
